# os-monitor

./: .gitignore  Cargo.toml  Readme.md  architecture.md  build.rs
bindings/macos/: AccessibilityElement.h  AccessibilityElement.m  AccessibilityUtils.h  AccessibilityUtils.m  Application.h  Application.m  Blocker.h  Blocker.m  Monitor.h  Monitor.m  SiteBlocker.h  SiteBlocker.m  UI.h  UI.m  WindowObserver.h  WindowObserver.m  WindowUtils.h  WindowUtils.m
src/: bindings.rs  blocking.rs  error.rs  event.rs  lib.rs  main.rs
src/platform/: README.md  macos.rs  mod.rs  windows.rs
src/platform/macos/: blocking.rs  events.rs  mod.rs  monitoring.rs  ui.rs
