[package]
name = "os-monitor"
version = "0.3.20"
edition = "2021"
authors = ["Paul Hovley <rphovley@gmail.com>"]
description = "OS level monitor for tracking window focus and input events"
license = "MIT"
repository = "https://github.com/CodeClimbersIO/os-monitor"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.8"
once_cell = "1.18"
ctrlc = "3.4.5"
log = "0.4.25"
env_logger = "0.11.6"

[build-dependencies]
cc = "1.0"
